@@ -1,6 +1,14 @@
-DIST django-picklefield-0.2.1.tar.gz 8939 SHA256 87fac7dd5873eab33a52e86863dd32b4bfeb65401ea438e81e5acb74836bb337 SHA512 90fc2b3974d54afd723a2e9da7db9d38e7822a821673829aa8e4201d7b41a8d34606e361cba2a81df6fa59055166a54c5918dbcd2333caea514d4d208c4f64e4 WHIRLPOOL 29afbd2d0d45f824a952d8fa71cc733afa006397cb5b1c104273890d99741d0e2473887c6c0505fe9c727afb6bd555b913b63697389e71cad75a7401f0ea6d38
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST django-picklefield-0.3.0.tar.gz 10334 SHA256 d1db231b9bec426a7f0b1c37ebbf4e5448658a4714820d74f847e2f769baa2f0 SHA512 01ba2f5227c3a4613212b9049cf69dfdcccba3aa79309a71fb107cbb0dd3976b9fe0e481ba79180c0a5d1b6e8039dbc367df35a3250ce57008d7fd572b1020ba WHIRLPOOL c696006ee777049058cc04fc6457f1931b855d6f74424a3e73ad87f5d25901a1ee6122b366c481351433b13cb6f20b9e61f417fc59808b30f31749293e86c074
-EBUILD django-picklefield-0.2.1.ebuild 658 SHA256 dfd75241dea38c42c1e5da1612533a72093f153538280a3f053d38471d456958 SHA512 71409794639a543e16be682ea7615b55fb760856e932ee22d2301f34e07465a306a1374f64a036d6fab595899d47fbba50c2c2073db88df04e96ae2b7d3bc334 WHIRLPOOL afb580fc686c7f042e170c01a5420207e734563964a08b294a9043fa6eab31865a806d351f3e9519dd48cc79e3dada52db7a556f9b79c40003a6b806a2908a56
-EBUILD django-picklefield-0.3.0.ebuild 686 SHA256 318573d49e18d7e9a9dca8915798dd3147b7569a7b67ae4c7290983b3714fc20 SHA512 f9597b644b364933840c004f263543d26455ea8c96303b69bb301feee4e31cb95227a70dadb35d7f55b85d8512a93d7c81ec9f690868395c2fc2bb03dee90a11 WHIRLPOOL 1a980b30230e0725fb6c9d29d9eda96cf21682723532e77a3c6df4981a90412456aedc5c2c153381e3be7385f579cb82ceb860cb20c85a59d5b47a91c386fe04
-MISC ChangeLog 575 SHA256 2d54146243144eec67f239b5fcfe593c861b934203ffff629f3daa3d5bea0d94 SHA512 0c8619d3b5b4eaa8126f5c861341ef7e1f2a4639ae957f7ed8effc0314ca3e8a2f9ffe65fc2edf1261921a78ec171f94ac42a2e3e132d2f5a03e16753cae9bdc WHIRLPOOL 7b9bdde8d8e356fbee38ffb42066b58432cfa05df3d94f98bcdc8b55b7516419fc217769bfa6f6ddd2750255cdf3a06266c9b482be7b693c936eb542fc134c86
+EBUILD django-picklefield-0.3.0.ebuild 705 SHA256 6eb896b28275710cc9866b396f9dfb323d068e0d89bf3ecfacd243f4eda1d717 SHA512 e38a2369d2fd4790052d6b38639cd6bf14b2f0bd207f958d81f50c2880812e32b7feb79f49cc065efab75c4d9d2d0229e3762baa67fcc373f28623c01483a640 WHIRLPOOL a8dad7dab036c65e8a11e2319f9e2224428023e4fce62c3aad59c592f6af87fa9322fa799f362820250a816fa22b040e573c099a3633733fa8323bb424ed0bc6
+MISC ChangeLog 720 SHA256 185bc9c71edc42105185b1e06936aaf7a63e84bbb4e29223965f33dab56956a5 SHA512 4013609764182d9758f2928d2234ba6d8d15622037aabcb41fb9155327de11abe5caa061d716471e7ecfbd818f6f6272382230b85a504edc81339f0ff8c4887b WHIRLPOOL 02d4994f6af26bea2de62a4e82dc5fd7a170bae19256de078efc9f99c15cbc54827bcdc96d08757750f362eca83cc2c95872fcdea9055967380fb4e8a7418afd
 MISC metadata.xml 335 SHA256 17310946023ac7602253f1441961a18d50675564a0d5081013c9e33be00d4d0b SHA512 425eedc2e657bce801b29f1934de8cb6fc55d2efb1bc69b59bd461824d0f0a0ea3cdfcd3cd4568d7a83dfeff3a082ace49319b412c55bcd9ce6f480187976a90 WHIRLPOOL d076174b61435ab1f5a7b7df1a7c315f7d810fed471ff4824464af02944dbe9a718a6573da148aa5b069898b8aae7e672bff9fb5648552e761dd003633eaeb09
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlGfkS0ACgkQso7CE7gHKw32JACgnDRE3IAluh8dIYc5gBm8jxBI
+D50AoNrZtBYBM9pCLI8rNSLxroW7WzXi
+=8M5E
+-----END PGP SIGNATURE-----
