@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/django-picklefield/django-picklefield-0.3.0.ebuild,v 1.1 2013/01/08 21:03:58 iksaif Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/django-picklefield/django-picklefield-0.3.0.ebuild,v 1.2 2013/05/24 16:11:09 idella4 Exp $
 
 EAPI="5"
 
@@ -17,7 +17,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-RDEPEND=">=dev-python/django-1.1.1
+RDEPEND=">=dev-python/django-1.1.1[${PYTHON_USEDEP}]
 	dev-python/six[${PYTHON_USEDEP}]"
 DEPEND="${RDEPEND}
 	dev-python/setuptools[${PYTHON_USEDEP}]"
