@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/django-picklefield
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/django-picklefield/ChangeLog,v 1.2 2013/01/08 21:03:58 iksaif Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/django-picklefield/ChangeLog,v 1.3 2013/05/24 16:11:09 idella4 Exp $
+
+  24 May 2013; Ian Delaney <idella4@gentoo.org>
+  -django-picklefield-0.2.1.ebuild, django-picklefield-0.3.0.ebuild:
+  update ebuild, drop old
 
 *django-picklefield-0.3.0 (08 Jan 2013)
 
